fix: reduce window size to work on small screens

--- a/ui/src/components/scss/platform/base.scss
+++ b/ui/src/components/scss/platform/base.scss
@@ -67,7 +67,7 @@ div.horizontalLine {
 div.shieldButtonsGroup {
     display: flex;
     border: 2px solid var(--shield-button-border-color);
-    width: 40%;
+    width: 100%;
     border-radius: 8px
 }
 
